--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:background="@android:color/white">
 
@@ -39,7 +39,6 @@
         android:id="@+id/event_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLength="50"
         android:padding="10dp"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
